fixing post package. there are stil errors.